--- a/functions/tax_declaration.html
+++ b/functions/tax_declaration.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>FAQs</title>
-    <script src="js/tax_expression.js" defer></script>   	
+    <title>Function as declaration</title>
+    <script src="js/tax_declaration.js" defer></script>   	
 </head>
 <body>
     <div id='taxOutput'></div>
