--- a/functions/tax_declaration.html
+++ b/functions/tax_declaration.html
@@ -6,6 +6,6 @@
     <script src="js/tax_declaration.js" defer></script>   	
 </head>
 <body>
-    <div id='taxOutput'></div>
+    <div id='taxOutput'>hest</div>
 </body>
 </html>
