--- a/functions/tax_declaration.html
+++ b/functions/tax_declaration.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Function as declaration +++</title>
+    <title>Function as declaration ++</title>
     <script src="js/tax_declaration.js" defer></script>
 </head>
 
